// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render block button 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #1a1a1a;
}

.c0:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

<button
  class="c0"
  type="default"
>
  Text Button
  <div
    class="c1"
  />
</button>
`;

exports[`Button should render button with specified icon 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0.25rem;
}

.c2 svg {
  fill: #8b8b8b;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2.c2.c2 svg {
  width: 20px;
  height: 20px;
}

.c3 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c4 .c1 {
  cursor: pointer;
}

.c4 .c1 svg {
  fill: #1a1a1a;
}

.c5 .c1 {
  cursor: pointer;
}

.c5 .c1 svg {
  fill: #1a1a1a;
}

.c6 .c1 {
  cursor: pointer;
}

.c6 .c1 svg {
  fill: #ffffff;
}

.c6:hover .c1 svg {
  fill: #4384f0;
}

.c7 .c1 {
  cursor: pointer;
}

.c7 .c1 svg {
  fill: #1a1a1a;
}

.c8 .c1 {
  cursor: pointer;
}

.c8 .c1 svg {
  fill: #1a1a1a;
}

.c9 .c1 {
  cursor: pointer;
}

.c9 .c1 svg {
  fill: #1a1a1a;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #fc5475;
  background-color: #fc5475;
  color: #ffffff;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c1 {
  cursor: pointer;
}

.c0 .c1 svg {
  fill: #ffffff;
}

.c0:hover {
  background-color: #ffffff;
  color: #fc5475;
}

.c0:hover .c1 svg {
  fill: #fc5475;
}

<button
  class="c0"
  type="danger"
>
  <i
    class="c1 c2"
    cursor="default"
    style="pointer-events: none;"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
      />
    </svg>
  </i>
  Delete
  <div
    class="c3"
  />
</button>
`;

exports[`Button should render button with specified size 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 1.5rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #1a1a1a;
}

.c0:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

<button
  class="c0"
  type="default"
>
  Text Button
  <div
    class="c1"
  />
</button>
`;

exports[`Button should render correctly 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #1a1a1a;
}

.c0:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

<button
  class="c0"
  type="default"
>
  Button
  <div
    class="c1"
  />
</button>
`;

exports[`Button should render different button type 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #4384f0;
  background-color: #4384f0;
  color: #ffffff;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #ffffff;
}

.c0:hover {
  background-color: #ffffff;
  color: #4384f0;
}

.c0:hover .c2 svg {
  fill: #4384f0;
}

<button
  class="c0"
  type="info"
>
  Text Button
  <div
    class="c1"
  />
</button>
`;

exports[`Button should render disabled button 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #1a1a1a;
}

.c0:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

<button
  class="c0"
  disabled=""
  type="default"
>
  Text Button
  <div
    class="c1"
  />
</button>
`;

exports[`Button should render loading button 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #1a1a1a;
}

.c0:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

.c0::before {
  width: 1em;
  height: 1em;
  margin-right: 8px;
  border: 1px solid #1a1a1a;
  border-radius: 50%;
  border-top-color: transparent;
  border-right-color: transparent;
  -webkit-animation: iECmZH 0.7s linear infinite;
  animation: iECmZH 0.7s linear infinite;
}

<button
  class="c0"
  type="default"
>
  Text Button
  <div
    class="c1"
  />
</button>
`;

exports[`Button should render outlined button 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #1a1a1a;
}

.c0:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

<button
  class="c0"
  type="default"
>
  Text Button
  <div
    class="c1"
  />
</button>
`;

exports[`Button should render rounded button 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 999px;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #1a1a1a;
}

.c0:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

<button
  class="c0"
  type="default"
>
  Text Button
  <div
    class="c1"
  />
</button>
`;

exports[`Button should render text button 1`] = `
.c1 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: transparent;
  background-color: transparent;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0:focus {
  outline: 0;
}

.c0:disabled,
.c0[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c0::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2 {
  cursor: pointer;
}

.c0 .c2 svg {
  fill: #1a1a1a;
}

.c0:hover {
  border-color: transparent;
  background-color: #e0e0e0;
}

<button
  class="c0"
  type="default"
>
  Text Button
  <div
    class="c1"
  />
</button>
`;
